--- a/app/language/en.json
+++ b/app/language/en.json
@@ -18,7 +18,41 @@
     },
     "projects": {
         "title": "Projects",
-        "description": "Here are some of my projects."
+        "description": "Here are some of my projects.",
+        "projectList": [
+            {
+                "id": 1,
+                "title": "My Portfolio",
+                "description": "This website! A personal portfolio to showcase my projects and skills, built with React, TypeScript, and Tailwind CSS.",
+                "stack": ["React", "TypeScript", "Tailwind CSS", "Vite"],
+                "completedDate": "October 2025",
+                "githubUrl": "https://github.com/jtentis/my-portfolio"
+            },
+            {
+                "id": 2,
+                "title": "Project 2",
+                "description": "Description for project 2.",
+                "stack": ["Next.js", "Stripe"],
+                "completedDate": "November 2025",
+                "githubUrl": "https://github.com/jtentis/my-portfolio"
+            },
+            {
+                "id": 3,
+                "title": "Project 3",
+                "description": "Description for project 3.",
+                "stack": ["Python", "FastAPI"],
+                "completedDate": "December 2025",
+                "githubUrl": "https://github.com/jtentis/my-portfolio"
+            },
+            {
+                "id": 4,
+                "title": "Project 4",
+                "description": "Description for project 4.",
+                "stack": ["Go", "Gin"],
+                "completedDate": "January 2026",
+                "githubUrl": "https://github.com/jtentis/my-portfolio"
+            }
+        ]
     },
     "curriculum": "curriculum"
 }
