Fix: ajustando para baixar o curriculo certo dependendo do idioma

--- a/app/language/en.json
+++ b/app/language/en.json
@@ -51,7 +51,11 @@
             }
         ]
     },
-    "curriculum": "curriculum",
+    "curriculum": {
+        "name": "Curriculum",
+        "path": "app/assets/Resume_JOAO_TENTIS.pdf",
+        "file": "Resume_JOAO_TENTIS.pdf"
+    },
     "footer": {
         "code": "Code",
         "madeBy": "Made by João Tentis",
