Feat: adicionando e ajeitando pagina about

--- a/app/language/en.json
+++ b/app/language/en.json
@@ -74,7 +74,7 @@
         ]
     },
     "curriculum": {
-        "name": "Curriculum",
+        "name": "curriculum",
         "path": "app/assets/Resume_JOAO_TENTIS.pdf",
         "file": "Resume_JOAO_TENTIS.pdf"
     },
