Feat, fix: consertando responsividade

--- a/app/language/pt.json
+++ b/app/language/pt.json
@@ -14,7 +14,7 @@
     },
     "home": {
         "title": "Início",
-        "description": "Desenvolvedor Full Stack | Gosto de criar coisas! 😉",
+        "description": "Desenvolvedor Full Stack | Gosto de criar coisas do início ao fim! 😉",
         "button": "Ver projetos"
     },
     "about": {
